All project files added

--- a/index.html
+++ b/index.html
@@ -943,8 +943,7 @@
 
     <!-- CTA Section Start -->
     <section
-      class="bg-[url(./Images/CTABg.svg)] bg-center bg-no-repeat min-h-[510px] relative w-full h-full ctaSection font-mullish text-white"
-    >
+      class="bg-[url(./Images/CTABg.svg)] bg-center bg-no-repeat min-h-[510px] relative w-full h-full ctaSection font-mullish text-white">
       <div
         class="mx-auto w-11/12 max-w-[1080px] pt-32 pb-10 relative flex items-center space-x-20 justify-between"
       >
